Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriIntegerRetNumObj.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
