Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRettextFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
